--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "react": "^19.0.0",
