--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "bounce": "^1.2.3",
     "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
